--- a/sass/partials/_entradas.scss
+++ b/sass/partials/_entradas.scss
@@ -1,10 +1,9 @@
 @use "variables";
 @use "mixins";
+
 .entradas {
 display: flex;
 flex-direction: row;
-
-
 
 .textoentradasform {
     @extend %areagris;
@@ -64,6 +63,9 @@ flex-direction: row;
   }
 }
 
+// Media Entradas
+
+// Celular
 @media (max-width: 600px) {
 
     .entradas {
@@ -79,4 +81,70 @@ flex-direction: row;
       .evento {
         width: 5rem;
       }
+}
+
+// Tablet
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  
+  .entradas {
+    display: flex;
+    flex-direction: row;
+
+    .textoentradasform {
+      display: flex;
+      justify-content: center;
+      width: 70%;
+      height: 70%;
+      border-radius: 5px;
+      color: variables.$blancotit;
+      margin: 10px;
+      flex-direction: column;
+    }
+
+    .fechas {
+      margin: 2rem;
+      text-align: center;
+
+      h2 {
+        color: variables.$rojofr;
+      }
+
+      .fechasgrid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
+
+        .evento {
+          @include mixins.entradasgrid;
+          animation: fadeIn 0.8s ease forwards;
+        }
+
+        @keyframes fadeIn {
+          from {
+            opacity: 0;
+            transform: translateY(20px);
+          }
+          to {
+            opacity: 1;
+            transform: translateY(0);
+          }
+        }
+      }
+    }
+  }
+
+  .entradasformulario {
+    margin: 10px;
+    color: variables.$blancotit;
+
+    .textocompra {
+      ul {
+        display: flex;
+        list-style-type: none;
+        flex-direction: column;
+        text-align: center;
+      }
+    }
+  }
 }
