--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -120,8 +120,10 @@ body {
     text-shadow: 0px 0px 19px rgba(0,0,0,0.6);
 }
 
-/* CELULARES */
-@media (max-width: 600px) {
+// Media
+
+// Celular
+@media (min-width: 0px) and (max-width: 600px) {
     .primer-parrafo {
         flex-direction: column;
         height: auto;
@@ -169,7 +171,6 @@ body {
             "foto5";
         height: auto;
         margin: 1rem;
-
     }
 
     .foto1 img, .foto2 img, .foto3 img, .foto4 img, .foto5 img {
@@ -183,4 +184,89 @@ body {
         margin: 10px auto;
         font-size: 1.2rem;
     }
+}
+
+// Tablets
+@media (min-width: 601px) and (max-width: 1024px) {
+  
+  .primer-parrafo {
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
+    gap: 1rem;
+  }
+
+  .primer-parrafo div {
+    width: 100%;
+    padding: 0 10px;
+  }
+
+  .primer-parrafo p {
+    font-size: 1rem;
+  }
+
+  .primer-parrafo iframe {
+    width: 100%;
+    height: 300px;
+  }
+
+  .segundo-parrafo {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    gap: 1rem;
+  }
+
+  .segundo-parrafo p {
+    font-size: 1rem;
+  }
+
+  .segundo-parrafo img {
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+  }
+
+    .grid-container1 {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(5, auto);
+        grid-template-areas:
+            "foto1"
+            "foto2"
+            "foto3"
+            "foto4"
+            "foto5";
+        height: auto;
+        margin: 1rem;
+    }
+
+  .grid-container1 img {
+    width: 100%;
+    height: auto;
+  }
+
+  .foto2 img,
+  .foto3 img,
+  .foto4 img,
+  .foto5 img {
+    object-fit: cover;
+    height: 250px;
+  }
+
+  h3 {
+    width: 70%;
+    margin: 1rem auto;
+    font-size: 1.4rem;
+  }
+
+  .negrita {
+    justify-content: center;
+    font-size: 1.1rem;
+  }
+
+  .paginas-principal {
+    width: 90%;
+    margin: auto;
+  }
 }
