--- a/sass/partials/_headernfooter.scss
+++ b/sass/partials/_headernfooter.scss
@@ -299,6 +299,7 @@ footer {
     align-items: center;
     background-color: #1C1C1C;
 
+
     p {
       display: flex;
       color: #3A3A3A;
@@ -327,15 +328,14 @@ footer {
     flex-direction: row;
 
     .mapafooter {
-      margin: 1vh 0 0 1vh;
-      width: 300px;
+    display: none;
     }
 
     .sponsors {
       display: flex;
       position: relative;
       gap: 10px;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: center;
 
       img {
